--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.532.0",
     "next": "15.4.4",
     "openai": "^5.10.2",
+    "pdf-poppler": "^0.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "stripe": "^18.3.0"
