--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.532.0",
     "next": "15.4.4",
     "openai": "^5.10.2",
+    "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -28,6 +29,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
