Add proper PDF parsing with pdf-parse and token limit handling

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.53.0",
+    "@types/pdf-parse": "^1.1.5",
     "lucide-react": "^0.532.0",
     "next": "15.4.4",
     "openai": "^5.10.2",
+    "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "stripe": "^18.3.0"
