--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lucide-react": "^0.532.0",
     "next": "15.4.4",
     "openai": "^5.10.2",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.4.54",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "stripe": "^18.3.0"
