--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openai": "^5.10.2",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.4.54",
     "react": "19.1.0",
     "react-dom": "19.1.0",
