--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pdfjs-dist": "^5.4.54",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^4.7.0",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
